--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,26 +10,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.8"
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pyinstaller
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pyinstaller
+        pip install -r requirements.txt
 
-      - name: Package with PyInstaller
-        run: |
-          pyinstaller reactautomationtoolv3.spec
+    - name: Package with PyInstaller
+      run: |
+        pyinstaller reactautomationtoolv3.spec
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: packaged-app
-          path: dist/reactautomationtoolv3
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: packaged-app
+        path: dist/reactautomationtoolv3
