--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Clean previous builds
+      run: | 
+        rm -rf dist build
+
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
