--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Package with PyInstaller
       run: |
-        pyinstaller reactautomationtoolv3.spec
+        pyinstaller reactautomationtoolv3s.spec
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
