--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Package with PyInstaller
       run: |
-        pyinstaller reactautomationtoolv3.spec
+        pyinstaller --onefile reactautomationtoolv3.spec
 
     - name: Create GitHub Release
       id: create_release
