--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,72 +1,46 @@
 name: Package with PyInstaller and Release
-
 on:
   push:
     branches:
       - main
-
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Clean previous builds
-      shell: pwsh
-      run: |
-        if (Test-Path dist) {
-          Remove-Item -Recurse -Force dist
-        }
-        if (Test-Path build) {
-          Remove-Item -Recurse -Force build
-        }
-
+    - uses: actions/checkout@v2
+    
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
-
-    - name: Check Python DLL
-      run: |
-        dir "C:\hostedtoolcache\windows\Python\3.8.10\x64\python38.dll"
-
-
-    - name: Run Terminal Commands
-      run: |
-       echo "Checking Python Path"
-       where python
-       python --version
-
-
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller
         pip install -r requirements.txt
-
+    
     - name: Package with PyInstaller
       run: |
-        pyinstaller --onefile reactautomationtoolv3.spec
-
-    - name: Create GitHub Release
+        pyinstaller reactautomationtoolv3.spec --clean
+    
+    - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v3.2.6  # Set version number here
-        release_name: "React Automation Tool v3.2.6"
-        draft: false  # Can be set as draft (true) or published (false)
-        prerelease: true  # If it is a pre-release version, you can set it to true
-
+        tag_name: v3.2.6
+        release_name: React Automation Tool v3.2.6
+        draft: false
+        prerelease: true
+    
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: dist/reactautomationtoolv3.exe  # Compiled file
-        asset_name: reactautomationtoolv3.exe  # File name in Release
+        asset_path: ./dist/reactautomationtoolv3.exe
+        asset_name: reactautomationtoolv3.exe
         asset_content_type: application/octet-stream
